assets/css/main.css
html { 
  height: 100%;
  background-color: white;
}

body {
  font-family: monospace;
  font-size: 16px;
  line-height: 1.4;
  margin: 0;
  min-height: 100%;
  overflow-wrap: break-word;

}
html.dark-mode {
  background-color: #0c0b0b;
  color: white;
}

#dark-mode-toggle {
  position: sticky;
  top: 14px;
  right: 14px;
  background: none;
  border: none;
  cursor: pointer;
  font-size: 28px;
  color: inherit;
}

.post-meta { text-align: right; }

h2, h3, h4, h5, h6 { margin-top: 3rem; }

hr { margin: 2rem 0; }

p { margin: 1rem 0; }

a {
    color: #6b9080;
    text-decoration: underline;
}
body.dark-mode a {
    color: #a4c3b2;
}

li { margin: 0.4rem 0; }

li::marker {
    color: #6b9080;
}

ul > li::marker {
    content: '◆ ';
}

ul > ul > li::marker {
    content: '◇ ';
}

.w {
  max-width: 640px;
  margin: 0 auto;
  padding: 4rem 2rem;
}

hr {
  text-align: center;
  border: 0;

  &:before { content: '/////' }
  &:after { content: attr(data-content) '/////' }
}

img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

